@@ -1,13 +1,23 @@
 [compileJava, compileTestJava]*.options*.encoding = 'UTF-8'
 eclipse.project.name = appName + '-core'
 
+repositories {
+  mavenCentral()
+}
+
 dependencies {
   api "com.badlogicgames.gdx:gdx-ai:$aiVersion"
   api "com.badlogicgames.gdx:gdx-box2d:$gdxVersion"
   api "com.badlogicgames.gdx:gdx:$gdxVersion"
   implementation 'com.google.code.gson:gson:2.10.1'
+  implementation 'org.postgresql:postgresql:42.7.3'
+  implementation 'com.fasterxml.jackson.core:jackson-databind:2.17.2'
 
   if(enableGraalNative == 'true') {
     implementation "io.github.berstanio:gdx-svmhelper-annotations:$graalHelperVersion"
   }
+}
+
+tasks.withType(JavaExec) {
+  jvmArgs += "--add-opens=java.base/java.util=ALL-UNNAMED"
 }
